--- a/results.html
+++ b/results.html
@@ -12,19 +12,18 @@
   <body>
     <h1>Search Results</h1>
     <p>Here are the database hits based on the information you have entered!</p>
-    <a href="http://127.0.0.1:5000/help">Testing!</a>
 </div>
 </head>
 <div class="container">
-Value of form variables:
+Search parameters entered:
 <p>
-name1= {{name1}}
+text = {{name1}}
 <p>
-name2= {{name2}}
+strain/host = {{name2}}
 <p>
-name3= {{name3}}
+limit results = {{name3}}
 <p>
-name4= {{name4}}
+sort by = {{name4}}
 <p>
 
 <h2>List of Entries</h2>
