--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <h3> Created in Spring 2022 by Jesse Valliere</h3>
   </body>
 </div>
-{{ wtf.quick_form(form2) }}
+<form id="package_form" action="" method="post">
+      <div class="panel-body">
+          <input type ="submit" name="action" value="Go to Search">
+      </div>
+      <div class="panel-body">
+          <input type ="submit" name="action" value="Go to BLAST">
+      </div>
+      
+ </form>
 {% endblock %}
 
