--- a/base.html
+++ b/base.html
@@ -28,6 +28,7 @@ li a {
 
 li a:hover {
   background-color: #111;
+  color: white;
 }
 
 </style>
@@ -36,11 +37,12 @@ li a:hover {
 
 <ul>
     <div style="color:white;font-size:240%;float:left">The <i>Wolbachia</i> CIF Gene Database</div>
-    <li><a href="/about">About</a></li>
-    <li><a href="/search">Search</a></li>
-    <li><a href="/blast">BLAST</a></li>
     <li><a href="/ref">References</a></li>
     <li><a href="/help">Help</a></li>
+    <li><a href="/blast">BLAST</a></li>
+    <li><a href="/browse">Browse</a></li>
+    <li><a href="/search">Search</a></li>
+    <li><a href="/about">About</a></li>
     <li><a href="/">Home</a></li>
 </ul>
 
@@ -52,7 +54,6 @@ li a:hover {
 <div class="container">
     <div class="page-header">
         <h1>The Wolbachia CIF gene Database</h1>
-        <h1>Jesse Was here</h1>
     </div>
 </div>
 {% endblock %}
