--- a/blast.html
+++ b/blast.html
@@ -7,7 +7,7 @@
 <div class="page-header">
     <h1>BLAST Search against Database Entries</h1>
   <body>
-    <p>BLAST finds regions of similarity between biological sequences. The program compares nucleotide sequences.</p>
+    <p>BLAST finds regions of similarity between biological sequences. The program compares protein sequences.</p>
   </body>
 </div>
 {{ wtf.quick_form(form) }}
