--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <div class="panel-body">
           <input type ="submit" name="action" value="Go to BLAST">
       </div>
+      <div class="panel-body">
+          <input type ="submit" name="action" value="Go to Browse">
+      </div>
       
  </form>
 {% endblock %}
