--- a/search.html
+++ b/search.html
@@ -1,15 +1,17 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Search Presidents{% endblock %}
+{% block title %}Search{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
     <h1>Search:</h1>
   <body>
-    <h1> Wolbachia CIF Gene Database Upload Form</h1>
-    <h2> Web Development in Advanced Bioinformatics </h2>
+    <h1> Wolbachia CIF Gene Database</h1>
+    <h2> Search the Database! </h2>
   </body>
 </div>
+<strong>Please choose one of the following:</strong>
+<p>
 {{ wtf.quick_form(form) }}
 {% endblock %}
