--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
           <input type ="submit" name="action" value="Go to BLAST">
       </div>
       <div class="panel-body">
+          <input type ="submit" name="action" value="Go to Upload">
+      </div>
+      <div class="panel-body">
           <input type ="submit" name="action" value="Go to Browse">
       </div>
       
