--- a/base.html
+++ b/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}Wolbachia CIF Database{% endblock %}
+{% block title %}CIF Database{% endblock %}
 
 {% block navbar %}
 
@@ -20,7 +20,7 @@ li {
 
 li a {
   display: block;
-  color: white;
+  color: #90ee90;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -36,7 +36,7 @@ li a:hover {
 <body>
 
 <ul>
-    <div style="color:white;font-size:240%;float:left">The <i>Wolbachia</i> CIF Gene Database</div>
+    <div style="color:#90ee90;font-size:240%;float:left">The CIF Gene Database</div>
     <li><a href="/ref">References</a></li>
     <li><a href="/help">Help</a></li>
     <li><a href="/blast">BLAST</a></li>
@@ -53,7 +53,7 @@ li a:hover {
 {% block content1 %}
 <div class="container">
     <div class="page-header">
-        <h1>The Wolbachia CIF gene Database</h1>
+        <h1>The CIF gene Database</h1>
     </div>
 </div>
 {% endblock %}
