--- a/gene.html
+++ b/gene.html
@@ -33,6 +33,7 @@
       </tr>
     </thead>
     <tbody>
+
            <tr>
              <td>{{entry.id}}</td>
              <td>{{entry.gene}}</td>
@@ -42,7 +43,7 @@
              <td>{{entry.strain}}</td>
              <td>{{entry.host}}</td>
              <td>{{entry.description}}</td>
-             <td>{{entry.ncbi_nucleotide}}</td>
+             <td>{{entry.ncbi_nucleotide}}</a>
              <td>{{entry.locus_tag}}</td>
              <td>{{entry.ncbi_protein}}</td>
              <td style="word-wrap: break-word;min-width: 160px;max-width: 400px;">{{entry.aa_sequence}}</td>
