--- a/help.html
+++ b/help.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
   
-{% block title %}Help for Wolbachia CIF Gene Database{% endblock %}
+{% block title %}Help - CIF Gene Database{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1> Help for the <i>Wolbachia</i> CIF Gene Database</h1>
-    <p> This page will contain help for executing searches and analyzing results.</p>
-    <p> The data is searchable by Wolbachia Strain and Arthropod Host.  </p>
-    <p> The BLAST Tool is searchable by gene sequence</p>
+    <h1>Help for the CIF Gene Database</h1>
+    <p>This page will contain help for executing searches and analyzing results.</p>
+    <p>The data is searchable by Wolbachia Strain and Arthropod Host.  </p>
+    <p>The BLAST Tool is searchable by gene sequence</p>
 </div>
 {% endblock %}
 ~                
