--- a/upload.html
+++ b/upload.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Upload{% endblock %}
+{% block title %}Upload - CIF Gene Database{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
     <h1>Upload Entry</h1>
   <body>
-    <h1>CIF Gene Database</h1>
     <h2>Upload an entry to the database!</h2>
   </body>
 </div>
